--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,12 @@ a {
     color: #000;
     text-decoration: none;
 }
-a:hover {
-    text-decoration: underline;
-}
+
 a:active {
-    color: blue;
+    color: rgba(38, 38, 173, 0.89);
 }
 a:visited {
-    color: orange;
+    color: rgba(232, 161, 29, 0.829);
 }
 
 .container {
@@ -85,6 +83,28 @@ a:visited {
 .contacts {
     font-size: 20px;
     font-weight: bold;
+    margin-left: 60px;
+    display: inline-block;
+    position: relative;
+    color:#0e92d3c1;
+}
+
+.contacts:after {
+    content: 'переход =>';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    background-color:#0d91d4ba;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.contacts:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
 
 .table {
